--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img class="logo-img" src="img/logo.jpeg" alt="logo">
+            <img class="logo-img" src="/img/logo.jpeg" alt="logo">
             <h1 class="logo-name">RESTAURANTE NORDESTINO</h1>
         </div>
     </header>
