--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img class="logo-img" src="/img/logo.jpeg" alt="logo">
+            <img class="logo-img" src="../img/logo.jpeg" alt="logo">
             <h1 class="logo-name">RESTAURANTE NORDESTINO</h1>
         </div>
     </header>
@@ -40,22 +40,22 @@
     <!--Itens disponíveis-->
     <main class="container-cards">
         <div class="cards">
-            <img decoding="async" src="/img/cuscuz.jpg" alt="Lanches">
+            <img decoding="async" src="img/cuscuz.jpg" alt="Lanches">
             <h2>Cuscuz Recheado</h2>
             <p>Melhores Sandwiches</p>
         </div>
         <div class="cards">
-            <img decoding="async" src="/img/feijao-tropeiro.jpg" alt="Lanches">
+            <img decoding="async" src="img/feijao-tropeiro.jpg" alt="Lanches">
             <h2>Feijão Tropeiro</h2>
             <p>Melhores Sandwiches</p>
         </div>
         <div class="cards">
-            <img decoding="async" src="/img/feijoada.jpg" alt="Lanches">
+            <img decoding="async" src="img/feijoada.jpg" alt="Lanches">
             <h2>Feijoada</h2>
             <p>Melhores Sandwiches</p>
         </div>
         <div class="cards">
-            <img decoding="async" src="/img/pastel.jpg" alt="Lanches">
+            <img decoding="async" src="img/pastel.jpg" alt="Lanches">
             <h2>Pastel Recheado</h2>
             <p>Melhores Sandwiches</p>
         </div>
