Update Correção imgs 1.1 index.html
Correção para carregamento das imagens.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img class="logo-img" src="../img/logo.jpeg" alt="logo">
+            <img class="logo-img" src="img/logo1.jpeg" alt="logo">
             <h1 class="logo-name">RESTAURANTE NORDESTINO</h1>
         </div>
     </header>
@@ -67,35 +67,35 @@
     <!--Lista de Produtos-->
     <section class="product-list">
         <div class="product-itens">
-            <img src="/img/cuscuz.jpg" alt="Cuscuz" class="product-img">
+            <img src="img/cuscuz.jpg" alt="Cuscuz" class="product-img">
             <div class="product-details">
                 <h3>Cuscuz</h3>
                 <p>R$ 19,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/feijoada.jpg" alt="Feijoada" class="product-img">
+            <img src="img/feijoada.jpg" alt="Feijoada" class="product-img">
             <div class="product-details">
                 <h3>Feijoada</h3>
                 <p>R$ 29,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/feijao-tropeiro.jpg" alt="Feijão Tropeiro" class="product-img">
+            <img src="img/feijao-tropeiro.jpg" alt="Feijão Tropeiro" class="product-img">
             <div class="product-details">
                 <h3>Feijão Tropeiro</h3>
                 <p>R$ 15,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/pastel.jpg" alt="Pastel" class="product-img">
+            <img src="img/pastel.jpg" alt="Pastel" class="product-img">
             <div class="product-details">
                 <h3>Pastel Recheado</h3>
                 <p>R$ 8,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/strogonoff.jpg" alt="Strogonoff" class="product-img">
+            <img src="img/strogonoff.jpg" alt="Strogonoff" class="product-img">
             <div class="product-details">
                 <h3>Strogonoff</h3>
                 <p>R$ 18,99</p>
@@ -104,105 +104,105 @@
 
 
         <div class="product-itens">
-            <img src="/img/cuscuz.jpg" alt="Cuscuz" class="product-img">
+            <img src="img/cuscuz.jpg" alt="Cuscuz" class="product-img">
             <div class="product-details">
                 <h3>Cuscuz</h3>
                 <p>R$ 19,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/feijoada.jpg" alt="Feijoada" class="product-img">
+            <img src="img/feijoada.jpg" alt="Feijoada" class="product-img">
             <div class="product-details">
                 <h3>Feijoada</h3>
                 <p>R$ 29,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/feijao-tropeiro.jpg" alt="Feijão Tropeiro" class="product-img">
+            <img src="img/feijao-tropeiro.jpg" alt="Feijão Tropeiro" class="product-img">
             <div class="product-details">
                 <h3>Feijão Tropeiro</h3>
                 <p>R$ 15,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/pastel.jpg" alt="Pastel" class="product-img">
+            <img src="img/pastel.jpg" alt="Pastel" class="product-img">
             <div class="product-details">
                 <h3>Pastel Recheado</h3>
                 <p>R$ 8,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/strogonoff.jpg" alt="Strogonoff" class="product-img">
+            <img src="img/strogonoff.jpg" alt="Strogonoff" class="product-img">
             <div class="product-details">
                 <h3>Strogonoff</h3>
                 <p>R$ 18,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/cuscuz.jpg" alt="Cuscuz" class="product-img">
+            <img src="img/cuscuz.jpg" alt="Cuscuz" class="product-img">
             <div class="product-details">
                 <h3>Cuscuz</h3>
                 <p>R$ 19,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/feijoada.jpg" alt="Feijoada" class="product-img">
+            <img src="img/feijoada.jpg" alt="Feijoada" class="product-img">
             <div class="product-details">
                 <h3>Feijoada</h3>
                 <p>R$ 29,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/feijao-tropeiro.jpg" alt="Feijão Tropeiro" class="product-img">
+            <img src="img/feijao-tropeiro.jpg" alt="Feijão Tropeiro" class="product-img">
             <div class="product-details">
                 <h3>Feijão Tropeiro</h3>
                 <p>R$ 15,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/pastel.jpg" alt="Pastel" class="product-img">
+            <img src="img/pastel.jpg" alt="Pastel" class="product-img">
             <div class="product-details">
                 <h3>Pastel Recheado</h3>
                 <p>R$ 8,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/strogonoff.jpg" alt="Strogonoff" class="product-img">
+            <img src="img/strogonoff.jpg" alt="Strogonoff" class="product-img">
             <div class="product-details">
                 <h3>Strogonoff</h3>
                 <p>R$ 18,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/cuscuz.jpg" alt="Cuscuz" class="product-img">
+            <img src="img/cuscuz.jpg" alt="Cuscuz" class="product-img">
             <div class="product-details">
                 <h3>Cuscuz</h3>
                 <p>R$ 19,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/feijoada.jpg" alt="Feijoada" class="product-img">
+            <img src="img/feijoada.jpg" alt="Feijoada" class="product-img">
             <div class="product-details">
                 <h3>Feijoada</h3>
                 <p>R$ 29,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/feijao-tropeiro.jpg" alt="Feijão Tropeiro" class="product-img">
+            <img src="img/feijao-tropeiro.jpg" alt="Feijão Tropeiro" class="product-img">
             <div class="product-details">
                 <h3>Feijão Tropeiro</h3>
                 <p>R$ 15,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/pastel.jpg" alt="Pastel" class="product-img">
+            <img src="img/pastel.jpg" alt="Pastel" class="product-img">
             <div class="product-details">
                 <h3>Pastel Recheado</h3>
                 <p>R$ 8,99</p>
             </div>
         </div>
         <div class="product-itens">
-            <img src="/img/strogonoff.jpg" alt="Strogonoff" class="product-img">
+            <img src="img/strogonoff.jpg" alt="Strogonoff" class="product-img">
             <div class="product-details">
                 <h3>Strogonoff</h3>
                 <p>R$ 18,99</p>
